This is the rollback of Bug 136467 patch, checked in a few minutes ago. That patch should be checked in Trunk, not this Branch. Sorry for the wrong operation.