mozilla/content/events/src/nsEventStateManager.cpp
@@ -4656,12 +4656,8 @@ nsEventStateManager::ResetBrowseWithCaret(PRBool *aBrowseWithCaret)
   mPresContext->GetShell(getter_AddRefs(presShell));
 
   // Make caret visible or not, depending on what's appropriate
-  if (presShell) {
-    return SetContentCaretVisible(presShell, mCurrentFocus,
-                                  *aBrowseWithCaret &&
-                                  (!gLastFocusedDocument ||
-                                   gLastFocusedDocument == mDocument));
-  }
+  if (presShell)
+    return SetContentCaretVisible(presShell, mCurrentFocus, *aBrowseWithCaret && gLastFocusedDocument == mDocument);
 
   return NS_ERROR_FAILURE;
 }
